[project]
name = "ailabber"
version = "0.1.0"
description = "AI Lab 分布式任务提交系统"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=24.1.1",
    "requests>=2.32.5",
    "shortuuid>=1.0.13",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
ailabber = "cmd.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aillaber_cmd"]

